Tests/StellaTests/Resources/printed-code/bad/ERROR_UNEXPECTED_REFERENCE/return_ref_from_non_reference_function_complex.st
language core;

extend with #references;

fn main(n : Nat) -> Nat {
    return new(succ(0))
}